fixed form field character clipping

--- a/style.scss
+++ b/style.scss
@@ -166,7 +166,6 @@ body{
     background-color: transparent;
     border: none;
     font-size: 7rem;
-    line-height: 8rem;
     color: white;
     margin-left: 20%;
     transition: width 0.1s linear;
